# conduit

./: lint_rules.yaml
client/: analysis_options.yaml  pubspec.yaml  test.sh
client/lib/: conduit_client.dart
client/lib/src/: conversion.dart  grpc_client.dart
client/test/: auth_test.dart  client_test.dart
gateway/: gateway.go  go.mod  go.sum  test.sh
gateway/pb/realworld/: article_service.pb.go  article_service.pb.gw.go  article_service_grpc.pb.go  auth_service.pb.go  auth_service.pb.gw.go  auth_service_grpc.pb.go  common.pb.go  user_service.pb.go  user_service.pb.gw.go  user_service_grpc.pb.go
gateway/postman/: auth.json
goserve/: articles.go  go.mod  go.sum  main.go  users.go
goserve/pb/realworld/: article_service.pb.go  user_service_grpc.pb.go
proto/: Cargo.toml  Makefile  gateway_config.yaml
proto/proto/realworld/: article_service.proto  auth_service.proto  common.proto  user_service.proto
proto/src/: main.rs
server/: .env  Cargo.toml
server/conduit/: Cargo.toml
server/conduit/migrations/: 20210421224644_create_users.sql  20210421225429_create_followers.sql  20210421225505_create_articles.sql  20210421225557_create_favorites.sql  20210421225642_create_comments.sql
server/conduit/sql/: schema.sql
server/conduit/src/: articles.rs  auth.rs  crypto.rs  error.rs  lib.rs  users.rs
server/conduit/src/articles/: article.rs  model.rs
server/conduit/src/model/: error.rs  mod.rs  primitives.rs  user.rs
server/conduit/src/types/: id.rs  mod.rs  password.rs  token.rs
server/conduit/src/users/: mod.rs  model.rs  password.rs  token.rs  user.rs
server/src/: articles.rs  auth.rs  conversion.rs  convert.rs  lib.rs  main.rs  status.rs  users.rs
server/src/pb/: google.api.rs  google.rpc.rs  mod.rs  realworld.rs
server/tests/test/: main.rs  setup.rs  users.rs
server/tests/test/pb/: google.api.rs  google.rpc.rs  mod.rs  realworld.rs
ui/: analysis_options.yaml  pubspec.yaml
ui/lib/: configure.dart  configure_web.dart  main.dart  providers.dart  theme.dart
ui/lib/model/: articles.dart  auth.dart  auth_state.dart
ui/lib/routing/: router.dart  routes.dart  state.dart
ui/lib/screens/: article_screen.dart  edit_article_screen.dart  home.dart  home_screen.dart  login.dart  login_screen.dart  not_found_screen.dart  profile_screen.dart  screens.dart  signup.dart  (+2 more)
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
(+30 files in other folders)
