[package]
name = "conduit_server"
version = "0.1.0"
authors = ["Juan Alvarez <j@yabit.io>"]
edition = "2018"
publish = false

[workspace]
members = [
    ".",
    "conduit",
]

[lib]
doctest = false

[dependencies]
prost = "0.8.0"
prost-types = "0.8.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.5.0", features = ["tls"] }
tonic-web = "0.1.0"
conduit = { path = "conduit" }
tokio-stream = { version = "0.1.7", features = ["net"] }
bytes = "1.0.1"
