[package]
name = "conduit"
version = "0.1.0"
authors = ["Juan Alvarez <j@yabit.io>"]
edition = "2018"
publish = false

[lib]
doctest = false

[dependencies]
argon2 = "0.1"
rand_core =  { version = "0.6", features = ["std"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "time", "uuid" ] }
tokio = { version = "1", features = ["rt-multi-thread"] }
time = "0.2.26"
slug = "0.1.4"
